Food Details Fixed Text-Align, Carousel and Bottom-Button Fixed

--- a/src/style/DetalhesComidas.css
+++ b/src/style/DetalhesComidas.css
@@ -15,5 +15,6 @@
 }
 
 .recipe-button-bottom {
+  margin-top: 20px;
   align-items: center;
 }
